--- a/NewsAggregator/Pages/Index.razor
+++ b/NewsAggregator/Pages/Index.razor
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="text-left my-1">
         <ul class="list-group">
-            @foreach (NewsCard card in cards)
+            @foreach (var card in cards)
             {
                 <li class="list-group-item">
                     <h5><a href="@card.Link" target="_blank">@card.Title</a></h5>
@@ -27,41 +27,21 @@
 @code {
     List<Source> sources = new List<Source>();
     List<NewsCard> cards = new List<NewsCard>();
-    string text = "";
 
     public void GetSources()
     {
         sources.Clear();
-        using (var connection = new SqliteConnection("Data Source=sourcesdata.db"))
+
+        using (var db = new ApplicationContext())
         {
-            connection.Open();
-
-            string sqlExpression = "SELECT * FROM Sources";
-            SqliteCommand command = new SqliteCommand(sqlExpression, connection);
-            using (SqliteDataReader reader = command.ExecuteReader())
-            {
-                if (reader.HasRows)
-                {
-                    while (reader.Read())
-                    {
-                        string title = reader.GetString(1);
-                        bool isPicked = reader.GetInt32(2) == 1 ? true : false;
-                        string link = reader.GetString(3);
-
-                        sources.Add(new Source(title, isPicked, link));
-                    }
-                }
-            }
-
-            connection.Close();
+            sources = db.Sources.ToList();
         }
 
-        foreach (Source source in sources)
+        foreach (var source in sources)
         {
             if (source.IsPicked)
             {
                 NewsCardFeed newsCardFeed = new NewsCardFeed(source.Link, source.Title);
-                text += source.Link + ": " + newsCardFeed.Items.Count + " // ";
                 cards.AddRange(newsCardFeed.Items);
             }
         }
